src/objects/DD_FSF_Chart_Fields__c.object
<CustomObject>
    <description>This is an object required to store the values coming via the FSF Chart Field Codes interface</description>
    <fields>
        <fullName>DD_Code__c</fullName>
        <label>Code</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DD_Record_Type__c</fullName>
        <label>Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Budget Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operating Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appropriation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category (UNSPSC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ship To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withholding Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Profile ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Handling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Method</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Witholding Class</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DD_Text__c</fullName>
        <label>Text</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>FSF_Chart_Fields</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>FSF_Chart_Fields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FSF_Chart_Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>